--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,7 @@ jobs:
       - name: adt
         run: |
           cd game
+          dir
           pack.bat
       - name: build project
         run: |
