--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,11 +26,13 @@ jobs:
           echo ${{ github.job }}
           echo ${{ github.run_number }}
           echo ${{ github.run_id }}
+          echo cd
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # Runs java
       - name: java
         run: |
+         echo cd
          javac HelloWorld.java
          java HelloWorld
       - name: adt
