--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -98,6 +98,11 @@ jobs:
           copy game/rm.apk gh-pages
           cd gh-pages
           dir
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
           
           
           
