--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -103,6 +103,16 @@ jobs:
           git add .
           git commit -m "generated"
           git push
-          
+      - name: Download the file
+        uses: suisei-cn/actions-download-file@v1
+        id: downloadfile  # Remember to give an ID if you need the output
+        with:
+         url: "http://apacheroyaleci2.westus2.cloudapp.azure.com:8080/job/royale-asjs_jsonly/lastSuccessfulBuild/artifact/out/apache-royale-0.9.8-bin-js.zip"
+         target: public/ 
+         run: |
+          cd public
+          tar –xvf apache-royale-0.9.8-bin-js.zip
+          dir
+       
           
           
