--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -113,7 +113,7 @@ jobs:
         id: tar
         run: |
           cd public
-          tar –xf apache-royale-0.9.8-bin-js.zip
+          tar –xf 'apache-royale-0.9.8-bin-js.zip'
           dir
        
           
