--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -112,6 +112,7 @@ jobs:
       - name: tar 
         id: tar
         run: |
+          attrib 'public/apache-royale-0.9.8-bin-js.zip'
           tar –xf 'public/apache-royale-0.9.8-bin-js.zip'
           dir
        
