--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -113,8 +113,8 @@ jobs:
         id: tar
         run: |
           attrib 'public/apache-royale-0.9.8-bin-js.zip'
-          tar -a -x -f my-artifact.zip
-          tar –a -x -f 'public/apache-royale-0.9.8-bin-js.zip'
+          tar -x -f my-artifact.zip
+          tar -x -f 'public/apache-royale-0.9.8-bin-js.zip'
           dir
        
           
