--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,8 @@ on:
     branches: [ master ]
   issue_comment:
     types: [created, edited]
+  issues:
+    types: [opened, edited, deleted]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
