--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -22,6 +22,12 @@ jobs:
     steps:
       - name: trace
         run: |
+         echo >1.txt
+         1
+         2
+         3
+         
+         
          echo "$GITHUB_CONTEXT"
         env:
          GITHUB_CONTEXT: ${{ toJson(github) }}
