--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
       - name: trace
         run: |
+          -js-compiler-option+="--compilation_level ADVANCED_OPTIMIZATIONS"
           echo "uuu"
           mkdir main
           dir
